# libsketchboard

./: .gitignore  AUTHORS  Makefile.am  configure.ac  sketchboard.pc.in
include/: Makefile.am  sketchboard.h
include/sketchboard/: node.h  sketch.h  transform.h  value.h
include/sketchboard-1.0/: sketchboard.h
include/sketchboard-1.0/sketchboard/: node.h  sketch.h
modules/: Makefile.am  addition.c
src/: Makefile.am  node.c  sketch.c
test/: Makefile.am  check_node_addition.c  check_node_management.c  check_node_transmission.c  check_sketch_management.c
