pkgincludedir = $(includedir)/$(PACKAGE)-$(LIBSKETCHBOARD_API_VERSION)
subpkgincludedir = $(pkgincludedir)//$(PACKAGE)
pkginclude_HEADERS = sketchboard.h
subpkginclude_HEADERS = \
                        sketchboard/sketch.h \
                        sketchboard/value.h \
                        sketchboard/node.h
